--- a/caesar-loesung/todo.txt
+++ b/caesar-loesung/todo.txt
@@ -6,9 +6,10 @@ Step 1
 + Encrypt character with key 25 and overflow
 
 Step 2
-- Encrypt empty string
-- Encrypt string with 2 characters
-- Encrypt string with many characters
++ Encrypt empty string
++ Encrypt text of length 1
++ Encrypt string with 2 characters
++ Encrypt string with many characters
 - Encrypt string with characters not in alphabet
 - Encrypt mixed string
 - Encrypt string with upper case characters
