--- a/direncryptor-loesung/todo.txt
+++ b/direncryptor-loesung/todo.txt
@@ -3,15 +3,21 @@ Verschlüsselung
 + Leeres Verzeichnis: Nichts passiert
 + Default directory service: FileBasedDirectoryService
 + StreamEncryptor wird im Konstruktor in FileEncryptor gewrapped
-- Verzeichnis mit einer Datei
-    - source wird verschlüsselt zu source.enc
-    - source wird gelöscht
-    - Streams werden ordnungsgemäß geschlossen
++ Verzeichnis mit einer Datei
+    + source wird verschlüsselt zu source.enc
+    + source wird anschließend gelöscht
 - Verzeichnis mit mehreren Dateien
 - Exception bei Verschlüsselung:
     - Originaldatei bleibt erhalten
     - Keine verschlüsselte Datei vorhanden
-- StreamBasedFileEncryptor benutzt stream encryptor
+
+FileBasedDirectoryService
+=========================
+
+StreamBasedFileEncryptor
+========================
+- Encryption benutzt internen Stream Encryptor
+- Input und Output-Streams werden nach Encryption geschlossen
 
 Progress Indicator
 ==================
